--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>com.smartik.backend.web.server.WebServer</mainClass>
+					<mainClass>com.socioty.smartik.backend.web.server.WebServer</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
