- Add simulation infra to backend; - Add device simulator for Smart Led.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+debug=true
+logging.level.org.eclipse.paho.client.mqttv3=WARN
+logging.level.com.socioty=DEBUG
+logging.level.com.socioty.smartik.backend.background=DEBUG
 spring.data.mongodb.uri=mongodb://smartik_backend:Winter2017!@ds137370.mlab.com:37370/heroku_2zbdv95w
+
+device3.id=4b66f437acba46348e3c557b3589d527
+device3.token=4cc87f77e380487e8d4dae55c608ae90
+
+
+user1.id=b04db6eefcfe47c0ab2197f31a2aed0c
